--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+@import 'app/shared/components/footer/footer.component.scss';
+@import 'app/shared/components/side-bar/side-bar.component.scss';
+@import 'app/shared/components/header/header.component.scss';
