--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -2,6 +2,9 @@
   background-color: #333;
   color: white;
   padding: 10px;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
 
   // Elementos internos (si los hay)
   &__social-icons {
