--- a/src/app/shared/components/spinner/spinner.component.scss
+++ b/src/app/shared/components/spinner/spinner.component.scss
@@ -6,9 +6,9 @@
 }
 
 .spinner-circle {
-  width: 300px;
-  height: 300px;
-  border: 15px solid rgba(0, 0, 0, 0.1);
+  width: 15vw;
+  height: 15vw;
+  border: 1vw solid rgba(0, 0, 0, 0.1);
   border-top-color: #3498db;
   border-radius: 50%;
   animation: spin 1s linear infinite;
@@ -20,5 +20,13 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+/* Estilos responsivos */
+@media (max-width: 768px) {
+  .spinner-circle {
+    width: 30vw;
+    height: 30vw;
   }
 }
