--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -22,6 +22,8 @@ body {
   background-color: #f5f5f5;
   padding: 20px;
   overflow-y: auto;
+  display: grid;
+  place-content: center;
 }
 
 /* Reset de margen para los encabezados y pies de página */
