Add home create contact section and make styles

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<section class="home">
+  <div class="home__description">
+    <h1>Welcome to My Angular Project</h1>
+    <p>This is a showcase of my projects and skills.</p>
+  </div>
+
+  <app-contact [socialLinks]="socialLinks"></app-contact>
+  <!-- <app-contact></app-contact> -->
+</section>
