feature/products ok, ready to merge

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,7 +13,7 @@ body {
 .content {
   display: flex;
   height: calc(100vh - 70px - 48px);
-  flex-direction: column; /* Cambiado a columna en dispositivos móviles */
+  flex-direction: column;
   overflow: hidden;
 }
 
@@ -26,22 +26,14 @@ body {
   place-content: center;
 }
 
-/* Reset de margen para los encabezados y pies de página */
 .header,
 .footer {
   margin: 0;
 }
 
-/* Estilos responsivos para dispositivos móviles */
 @media (max-width: 768px) {
-  .content {
-    height: inherit;
-  }
-
   .main-content {
-    min-height: max-content;
-    flex: 1;
-    padding: 10px;
-    overflow-y: auto;
+    display: grid;
+    place-content: center;
   }
 }
