--- a/src/app/pages/home/contact/contact.component.html
+++ b/src/app/pages/home/contact/contact.component.html
@@ -1,5 +1,5 @@
 <section class="contact">
-  <h2>Contact Me</h2>
+  <h2>Contact Me:</h2>
   <div class="contact__social-links">
     <a
       *ngFor="let link of socialLinks"
