--- a/src/app/pages/client/client-list/client-list.component.scss
+++ b/src/app/pages/client/client-list/client-list.component.scss
@@ -9,7 +9,9 @@
   list-style: none;
 
   &__item {
+    position: relative;
     min-width: 250px;
+    min-height: 140px;
     flex: 0 0 calc(33.33% - 20px);
     padding: 20px;
     background-color: white;
@@ -31,6 +33,29 @@
       font-size: 1.1rem;
       margin-top: 10px;
       color: #666;
+    }
+
+    &__see-button {
+      position: absolute;
+      right: 10px;
+      bottom: 10px;
+      background-color: #2e5671;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      padding: 10px 20px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: #2980b9;
+      }
+
+      &:focus {
+        outline: none;
+        box-shadow: 0 0 5px rgba(52, 152, 219, 0.8);
+      }
     }
 
     strong {
