--- a/src/app/pages/client/client.component.scss
+++ b/src/app/pages/client/client.component.scss
@@ -1,4 +1,4 @@
-.clients__container{
+.clients__container {
   display: grid;
   place-content: center;
   width: 80vw;
@@ -7,5 +7,23 @@
     font-weight: bold;
     margin-bottom: 10px;
     color: #333;
+  }
+
+  .custom-swal-container {
+    font-family: Arial, sans-serif;
+    max-width: 600px;
+    background-color: white;
+  }
+
+  .custom-swal-title {
+    font-size: 1.5rem;
+    color: #333;
+    margin-bottom: 10px;
+  }
+
+  .custom-swal-html-container {
+    font-size: 1rem;
+    color: #666;
+    line-height: 1.5;
   }
 }
