--- a/src/app/pages/product/components/sidebar/sidebar.component.scss
+++ b/src/app/pages/product/components/sidebar/sidebar.component.scss
@@ -9,7 +9,7 @@
     &-a {
       display: block;
       padding: 10px;
-      color: #f5f5f5;
+      color: #cbc5c5;
       text-decoration: none;
       border-radius: 5px;
       transition: background-color 0.3s ease;
