--- a/src/app/pages/product/new-product-form/new-product-form.component.scss
+++ b/src/app/pages/product/new-product-form/new-product-form.component.scss
@@ -42,4 +42,10 @@
       box-shadow: 0 0 5px rgba(52, 152, 219, 0.8);
     }
   }
+
+  .text-danger{
+    color: #d73030;
+    font-size: small;
+    font-weight: 500;
+  }
 }
