--- a/src/app/pages/client/client-list/client-list.component.scss
+++ b/src/app/pages/client/client-list/client-list.component.scss
@@ -7,8 +7,8 @@
   justify-content: center;
   align-items: center;
   list-style: none;
-  max-height: 75vh;
-  overflow-y: auto;
+  max-height: calc(100vh - 200px);
+  overflow: auto;
 
   @media screen and (max-width: 768px) {
     max-height: 700px;
