--- a/src/app/pages/product/product-list/product-list.component.scss
+++ b/src/app/pages/product/product-list/product-list.component.scss
@@ -8,11 +8,12 @@
   justify-content: center;
   align-items: center;
   list-style: none;
+  overflow: auto;
 
 
   @media (max-width: 768px) {
     margin-left: 0;
-    max-height: 700px;
+    max-height: 740px;
     overflow-y: auto;
     gap: 20px;
   }
@@ -26,7 +27,6 @@
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     cursor: pointer;
 
