--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,7 @@ body {
 @import 'app/shared/components/footer/footer.component.scss';
 @import 'app/shared/components/spinner/spinner.component.scss';
 @import 'app/shared/components/header/header.component.scss';
+@import 'app/pages/client/client.component.scss';
+@import 'app/pages/home/home.component.scss';
+@import 'app/pages/product/product.component.scss';
+
