--- a/src/app/pages/client/client.component.scss
+++ b/src/app/pages/client/client.component.scss
@@ -1,29 +1,31 @@
-.clients__container {
-  display: grid;
-  place-content: center;
-  width: 80vw;
+.user-details {
+  padding: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #333;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+
   &__title {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 10px;
     color: #333;
-  }
-
-  .custom-swal-container {
-    font-family: Arial, sans-serif;
-    max-width: 600px;
-    background-color: white;
-  }
-
-  .custom-swal-title {
-    font-size: 1.5rem;
-    color: #333;
+    font-size: 24px;
     margin-bottom: 10px;
   }
 
-  .custom-swal-html-container {
-    font-size: 1rem;
-    color: #666;
-    line-height: 1.5;
+  &__list {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: flex-start;
+
+    &__item {
+      margin-bottom: 5px;
+
+      &__label {
+        color: darken(#333, 20%);
+      }
+    }
   }
 }
